--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 application/config/app.php
 application/config/database.php
+application/config/email.php
 
 application/cache/*
 !application/cache/index.html
