--- a/.htaccess
+++ b/.htaccess
@@ -4,3 +4,8 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ /index.php?$1 [L]  
 
 AddHandler application/x-httpd-php-7.1 .php
+
+php_value upload_max_filesize 256M
+php_value post_max_size 256M
+php_value max_execution_time 300
+php_value max_input_time 300
